@@ -1734,7 +1734,8 @@ div.toc > dl > dt {
 	text-decoration: underline;
 }
 
-.calloutlist img, .callout {
+.calloutlist img,
+.callout {
 	padding: 0px;
 	margin: 0px;
 	width: 12pt;
